<resources>
    <string name="app_name">Focus On</string>

    <!--Textos Repetidos-->
    <string name="textoCorreo">Correo</string>
    <string name="textoContrasena">Contraseña</string>
    <string name="textoRegistrarse">Registrarse</string>
    <string name="textoHorasMinutosSegundos">hh:MM:ss</string>
    <string name="textoIniciar">Iniciar</string>
    <string name="textoPausar">Pausar</string>
    <string name="textoReiniciar">Reiniciar</string>
    <string name="textoEliminar">Eliminar</string>

    <!--Main Activity-->
    <string name="textoIniciarSesion">Iniciar Sesión</string>

    <!--Registro Activity-->
    <string name="textoNombreDeUsuario">Nombre de Usuario</string>
    <string name="textoMinimo6Caracteres">Mínimo 6 caracteres</string>
    <string name="textoConfirmarContrasena">Confirmar Contraseña</string>

    <!--Menu Principal-->
    <string name="textoTareas">TAREAS</string>
    <string name="textoRutinas">RUTINAS</string>
    <string name="textoTemporizadores">TEMPORIZADORES</string>


    <!--Opciones Tareas y Subtareas-->
    <string name="textoCrearSubtarea">Crear Subtarea</string>
    <string name="textoEditar">Editar</string>

    <!--Alert Dialog-->
    <string name="textoOk">Ok</string>
    <string name="textoSi">Sí</string>
    <string name="textoCancelar">Cancelar</string>

    <!--Alerta Crear Editar Tarea Subtarea-->
    <string name="textoCreaUnaTarea">Crea una Tarea</string>
    <string name="textoCreaUnaSubtarea">Crea una Subtarea</string>
    <string name="textoEditarTarea">Editar Tarea</string>
    <string name="textoEditarSubtarea">Editar Subtarea</string>
    <string name="textoBorrarTarea">Borrar Tarea</string>
    <string name="textoBorrarSubtarea">Borrar Subtarea</string>
    <string name="textoInsertarTituloTarea">Inserta el título de la Tarea</string>
    <string name="textoInsertarTituloSubtarea">Inserta el título de la Subtarea</string>
    <string name="descripcionBorrarTarea">¿Estás seguro de borrar la Tarea?</string>
    <string name="descripcionBorrarSubtarea">¿Estás seguro de borrar la Subtarea?</string>

    <!--Alerta Borrar Rutina-->
    <string name="textoBorrarRutina">Borrar Rutina</string>
    <string name="descripcionBorrarRutina">¿Estás seguro de borrar la Rutina?</string>

    <!--Alerta Borrar Temporizador-->
    <string name="textoBorrarTemporizador">Borrar Temporizador</string>
    <string name="descripcionBorrarTemporizador">¿Estás seguro de borrar el Temporizador?</string>

    <!--Crear Rutina Activity-->
    <string name="textoCrearRutina">Crear Rutina</string>
    <string name="textoInsertarTituloRutina">Inserta un título para la rutina</string>
    <string name="textoLu">Lu</string>
    <string name="textoMa">Ma</string>
    <string name="textoMi">Mi</string>
    <string name="textoJu">Ju</string>
    <string name="textoVi">Vi</string>
    <string name="textoSa">Sá</string>
    <string name="textoDo">Do</string>
    <string name="textoRepetirCadaSemana">Repetir cada semana</string>
    <string name="textoSeleccionaHoraInicial">Selecciona la Hora Inicial</string>
    <string name="textoSeleccionaHoraFinal">Selecciona la Hora Final</string>

    <!--Crear Temporizador Activity-->
    <string name="textoCrearTemporizador">Crear Temporizador</string>
    <string name="textoInsertarTituloTemporizador">Inserta un título para el temporizador</string>
    <string name="textoInsertarTiempoTrabajo">Tiempo de Trabajo:</string>
    <string name="textoInsertarTiempoDescanso">Tiempo de Descanso:</string>
    <string name="textoDosPuntos">:</string>

    <!--Iniciar Temporizador-->
    <string name="textoTemporizador">Temporizador</string>
    <string name="textoReiniciarTemporizador">Reiniciar Temporizador</string>
    <string name="descripcionReiniciarTemporizador">¿Estás seguro de que quieres reiniciar el temporizador?</string>

    <!--Elemento Temporizador-->
    <string name="textoTrabajo">Trabajo</string>
    <string name="textoDescanso">Descanso</string>

    <!--Snackbars errores-->
    <string name="textoErrorDatosVacios">Debes rellenar todos los datos antes.</string>
    <string name="textoErrorCorreoContrasenaIncorrectos">El correo o contraseña son incorrectos.</string>
    <string name="textoErrorRegistro">El correo es inválido o el usuario ya existe.</string>
    <string name="textoErrorContrasenaCorta">La contraseña debe tener mínimo 6 caracteres.</string>
    <string name="textoErrorConfirmarContrasenaErronea">La contraseña y su confirmación son diferentes.</string>

    <!--Error textInputs-->
    <string name="textoDatoVacío">Rellena el dato</string>
    <string name="textoDatoIncorrecto">Dato incorrecto</string>
    <string name="textoDatoDiferente">No son iguales</string>

    <!--Placeholder Texts-->
    <string name="textoTitulo">Título</string>
    <string name="textoDiasSemana">Días Semana</string>
    <string name="textoHorasYMinutos">hh:MM - hh:MM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>