<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewTituloRutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoTitulo"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <LinearLayout
        android:id="@+id/layoutTrabajoDescanso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textViewTituloRutina"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewMinutosSegundosTrabajo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoHorasMinutosSegundos"
                android:fontFamily="@font/montserrat_semibold"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textViewMinutosSegundosDescanso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoHorasMinutosSegundos"
                android:fontFamily="@font/montserrat_semibold"
                android:textAlignment="center"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoTrabajo"
                android:fontFamily="@font/montserrat_semibold"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoDescanso"
                android:fontFamily="@font/montserrat_semibold"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotonesTemporizador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/layoutTrabajoDescanso">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonIniciarTemporizador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_semibold"
            app:icon="@drawable/play_arrow"
            android:text="@string/textoIniciar"
            android:textSize="15sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonEliminarTemporizador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat_semibold"
            app:icon="@drawable/delete"
            android:text="@string/textoEliminar"
            android:textSize="15sp"/>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layoutBotonesTemporizador"
        android:scaleY="3"
        app:dividerColor="@color/blue_bell"/>

</RelativeLayout>