<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutRegistroActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/black" />

    <ImageView
        android:id="@+id/imagenLogoRegistro"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/focus_on"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/imagenLogoRegistro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/person"
                android:hint="@string/textoNombreDeUsuario"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/editTextNombreRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCorreoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/mail"
                android:hint="@string/textoCorreo"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/editTextCorreoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputContrasenaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/lock"
                android:hint="@string/textoContrasena"
                app:endIconMode="password_toggle"
                app:helperText="@string/textoMinimo6Caracteres">

                <EditText
                    android:id="@+id/editTextContrasenaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmarContrasenaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/lock"
                android:hint="@string/textoConfirmarContrasena"
                app:endIconMode="password_toggle"
                app:helperText="@string/textoMinimo6Caracteres">

                <EditText
                    android:id="@+id/editTextConfirmarContrasenaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/textoRegistrarse"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>